# data-management-system-SQLite

./: README.md  environment.yml  gitignore  pyproject.toml
lab_db_app/: streamlit_app.py
lab_db_app/pages/: data_intake.py
src/: analysis_metadata.py  config.py  create_tables.py  data_validation.py  data_validation_v2.py  delete_records.py  file_rename.py  full_metadata.py  generate_metadata_template.py  insert.py  insert_csv.py  migration.py  migration_v2.py  queries.py  queries_v2.py  update_records.py
src/app/: streamlit_app.py
src/app/pages/: browse_search.py  data_intake.py  quality_control.py
src/app/ui/: action_panels.py  filter_widgets.py  layout.py
src/lab_data_manager/: data_validation.py  delete_records.py  insert_csv.py  queries.py
src/lab_db_app/: .gitignore  config.py  connection.py  streamlit_app.py
src/lab_db_app/.streamlit/: secrets.toml
src/lab_db_app/pages/: browse_search.py  data_intake.py
src/queries/: QC_queries.py  browse_queries.py  delete_queries.py  insert_queries.py  queries_utils.py  queries_v1.py  save_searche.py
src/services/: data_validation.py  delete_service.py  preflight_update.py  qc_service.py  rename_date.py
